# openpose_ros

./: README.md
openpose_ros/launch/: openpose_ros.launch
openpose_ros/src/: openpose_flags.cpp  openpose_ros_io.cpp
openpose_ros_examples/: CMakeLists.txt  package.xml
openpose_ros_examples/scripts/: GetPostureFromImage.py  RosOpenPoseServiceExample.py  norm.csv  norm_2m.csv  norm_3m.csv  norm_4m.csv  norm_5m.csv  norm_6m.csv  norm_7m.csv  norm_8m.csv  norm_9m.csv
openpose_ros_msgs/: CMakeLists.txt
openpose_ros_srvs/: CMakeLists.txt  package.xml
openpose_ros_srvs/srv/: DetectPeoplePoseFromImg.srv
